add fire base login

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,9 @@ jobs:
                 name: Install Firebase
                 command: npm install --save-dev firebase-tools
             - run:
+                name: Login to Firebase
+                command: firebase login
+            - run:
                 name: Deploy Master to Firebase
                 command: npm run firebase-deploy
 
