--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,11 +52,8 @@ jobs:
                 name: Install Firebase
                 command: npm install --save-dev firebase-tools
             - run:
-                name: Login to Firebase
-                command: npm run firebase-login
-            - run:
                 name: Deploy Master to Firebase
-                command: npm run firebase-deploy
+                command: npm run firebase-deploy --token "$FIREBASE_TOKEN"
 
 workflows:
     version: 2
